# pycentauro

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/pycentauro/: xacro_compile_example.py
